==> zephyrproject-rtos/zephyr/drivers/usb/udc/udc_max32.c <==
#include "udc_common.h"
#include <string.h>
#include <stdio.h>
#include <stdlib.h>
#include <zephyr/kernel.h>
#include <zephyr/drivers/usb/udc.h>
#include <wrap_max32_usb.h>
#include <zephyr/drivers/clock_control/adi_max32_clock_control.h>
#include <zephyr/logging/log.h>
#define DT_DRV_COMPAT adi_max32_usbhs

static int udc_max32_ep_enqueue(const struct device *dev, struct udc_ep_config *const cfg,
				struct net_buf *buf)
{
	struct udc_max32_evt evt = {
		.type = UDC_MAX32_EVT_XFER,
		.ep_cfg = cfg,
	};

	LOG_DBG("%p enqueue %p", dev, buf);
	udc_buf_put(cfg, buf);

	if (cfg->stat.halted) {
		LOG_DBG("ep 0x%02x halted", cfg->addr);
		return 0;
	}

	k_msgq_put(&drv_msgq, &evt, K_NO_WAIT);

	return 0;
}

static int udc_max32_ep_enable(const struct device *dev, struct udc_ep_config *const cfg)
{
	maxusb_ep_type_t ep_type;
	int ret;

	if (USB_EP_GET_IDX(cfg->addr) == 0) {
		return 0;
	}

	if (cfg->caps.in) {
		ep_type = MAXUSB_EP_TYPE_IN;
	} else if (cfg->caps.out) {
		ep_type = MAXUSB_EP_TYPE_OUT;
	} else {
		LOG_ERR("ep 0x%02x is not IN or OUT", cfg->addr);
		return -ENODEV;
	}

	ret = MXC_USB_ConfigEp(USB_EP_GET_IDX(cfg->addr), ep_type, cfg->mps);
	if (ret != 0) {
		LOG_ERR("Failed to configure ep 0x%02x", cfg->addr);
		return ret;
	}

	return 0;
}

static int udc_max32_ep_disable(const struct device *dev, struct udc_ep_config *const cfg)
{
	int ret;

	if (USB_EP_GET_IDX(cfg->addr) == 0) {
		return 0;
	}

	ret = MXC_USB_ResetEp(USB_EP_GET_IDX(cfg->addr));

	return ret;
}

static int udc_max32_ep_set_halt(const struct device *dev, struct udc_ep_config *const cfg)
{
	int ret;

	if (cfg->stat.halted == true) {
		LOG_WRN("ep 0x%02x is already as halt", cfg->addr);
		return 0;
	}

	LOG_DBG("Set halt ep 0x%02x", cfg->addr);

	ret = MXC_USB_Stall(USB_EP_GET_IDX(cfg->addr));
	if (ret != 0) {
		LOG_ERR("Failed to set halt ep 0x%02x", cfg->addr);
		return ret;
	}

	cfg->stat.halted = true;

	return 0;
}

static int udc_max32_ep_clear_halt(const struct device *dev, struct udc_ep_config *const cfg)
{
	int ret;

	if (cfg->stat.halted == false) {
		LOG_WRN("ep 0x%02x is not set as halt, no need to clear halt.", cfg->addr);
		return 0;
	}

	LOG_DBG("Clear halt ep 0x%02x", cfg->addr);

	ret = MXC_USB_Unstall(USB_EP_GET_IDX(cfg->addr));
	if (ret != 0) {
		LOG_ERR("Failed to clear halt ep 0x%02x", cfg->addr);
		return ret;
	}

	cfg->stat.halted = false;

	/* If there is a request for this endpoint, enqueue the request. */
	if (udc_buf_peek(cfg) != NULL) {
		struct udc_max32_evt evt = {
			.type = UDC_MAX32_EVT_XFER,
			.ep_cfg = cfg,
		};

		k_msgq_put(&drv_msgq, &evt, K_NO_WAIT);
	}

	return 0;
}

static int udc_max32_set_address(const struct device *dev, const uint8_t addr)
{
	int ret;

	LOG_DBG("Set new address %u for %p", addr, dev);

	ret = MXC_USB_SetFuncAddr(addr);
	if (ret != 0) {
		LOG_ERR("Failed to set device address %u", addr);
		return -EINVAL;
	}

	return 0;
}

static int udc_max32_host_wakeup(const struct device *dev)
{
	LOG_DBG("Remote wakeup from %p", dev);

	MXC_USB_RemoteWakeup();

	return 0;
}

static int udc_max32_enable(const struct device *dev)
{
	int ret;

	LOG_DBG("Enable device %p", dev);

	MXC_USB_EventClear(MAXUSB_EVENT_SUDAV);
	ret = MXC_USB_EventEnable(MAXUSB_EVENT_SUDAV, udc_max32_event_callback, (void *)dev);
	if (ret != 0) {
		LOG_ERR("Failed to enable SUDAV event.");
		return ret;
	}

	MXC_USB_EventClear(MAXUSB_EVENT_SUSP);
	ret = MXC_USB_EventEnable(MAXUSB_EVENT_SUSP, udc_max32_event_callback, (void *)dev);
	if (ret != 0) {
		LOG_ERR("Failed to enable SUSP event.");
		return ret;
	}

	MXC_USB_EventClear(MAXUSB_EVENT_DPACT);
	ret = MXC_USB_EventEnable(MAXUSB_EVENT_DPACT, udc_max32_event_callback, (void *)dev);
	if (ret != 0) {
		LOG_ERR("Failed to enable DPACT event.");
		return ret;
	}

	MXC_USB_EventClear(MAXUSB_EVENT_BRST);
	ret = MXC_USB_EventEnable(MAXUSB_EVENT_BRST, udc_max32_event_callback, (void *)dev);
	if (ret != 0) {
		LOG_ERR("Failed to enable BRST event.");
		return ret;
	}

	ret = MXC_USB_Connect();

	return ret;
}

static int udc_max32_disable(const struct device *dev)
{
	int ret;

	LOG_DBG("Disable device %p", dev);
	ret = MXC_USB_Disconnect();

	return ret;
}

static int udc_max32_init(const struct device *dev)
{
	const struct udc_max32_config *config = dev->config;
	struct udc_data *data = dev->data;
	maxusb_cfg_options_t usb_opts;
	int ret;

	if (data->caps.hs) {
		usb_opts.enable_hs = 1;
	}
	usb_opts.delay_us = udc_max32_delay_us;
	usb_opts.init_callback = NULL;
	usb_opts.shutdown_callback = NULL;

	/* Enable clock */
	ret = clock_control_on(config->clock, (clock_control_subsys_t)&config->perclk);
	if (ret != 0) {
		LOG_ERR("Failed to enable USB peripheral clock");
		return ret;
	}

	MXC_SYS_Reset_Periph(MXC_SYS_RESET0_USB);

	ret = Wrap_MXC_USB_Init(&usb_opts);
	if (ret != 0) {
		LOG_ERR("Failed to initialize USB.");
		return ret;
	}

	ret = MXC_USB_EventEnable(MAXUSB_EVENT_NOVBUS, udc_max32_event_callback, (void *)dev);
	if (ret != 0) {
		LOG_ERR("Failed to enable NOVBUS event.");
		return ret;
	}
	ret = MXC_USB_EventEnable(MAXUSB_EVENT_VBUS, udc_max32_event_callback, (void *)dev);
	if (ret != 0) {
		LOG_ERR("Failed to enable VBUS event.");
		return ret;
	}

	if (udc_ep_enable_internal(dev, USB_CONTROL_EP_OUT, USB_EP_TYPE_CONTROL, 64, 0)) {
		LOG_ERR("Failed to enable control endpoint");
		return -EIO;
	}

	if (udc_ep_enable_internal(dev, USB_CONTROL_EP_IN, USB_EP_TYPE_CONTROL, 64, 0)) {
		LOG_ERR("Failed to enable control endpoint");
		return -EIO;
	}

	config->irq_func(); /* UDC IRQ enable*/

	return 0;
}

static int udc_max32_shutdown(const struct device *dev)
{
	MXC_USB_Shutdown();
	irq_disable(DT_INST_IRQN(0));

	if (udc_ep_disable_internal(dev, USB_CONTROL_EP_OUT)) {
		LOG_ERR("Failed to disable control endpoint");
		return -EIO;
	}

	if (udc_ep_disable_internal(dev, USB_CONTROL_EP_IN)) {
		LOG_ERR("Failed to disable control endpoint");
		return -EIO;
	}

	return 0;
}
